--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/IGnwBdOvr98?si=3zIRcZdGvnmHNOyO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/IGnwBdOvr98?si=3zIRcZdGvnmHNOyO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay=1; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 </body>
 </html>
