updated colors and edited home

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <!-- notification for small viewports and landscape oriented smartphones -->
 <div class="device-notification">
   <a class="device-notification--logo" href="#0">
-    <img src="assets/img/nabi.png" alt="Logo">
-    <p>Global</p>
+    <img src="assets/img/nabi.png" alt="Logo-mobile">
+    <p>Nabicook</p>
   </a>
-  <p class="device-notification--message">Global has so much to offer that we must request you orient your device to portrait or find a larger screen. You won't be disappointed.</p>
+  <p class="device-notification--message">Your screen is too small to view the designed content! Consider using a landscape mode or a desktop mode.</p>
 </div>
 
 <div class="perspective effect-rotate-left">
@@ -37,9 +37,9 @@
         </header>
         <nav class="l-side-nav">
           <ul class="side-nav">
-            <li class="is-active"><span>Home</span></li>
-            <li><span>Works</span></li>
+            <li class="is-active"><span>Welcome</span></li>
             <li><span>About</span></li>
+            <li><span>CIS</span></li>
             <li><span>Contact</span></li>
             <li><span>Hire us</span></li>
           </ul>
@@ -48,7 +48,7 @@
           <li class="l-section section section--is-active">
             <div class="intro">
               <div class="intro--banner">
-                <h1>N4B1<br>nabicook<br></h1>
+                <h1>Hi there,<br><br>it's nabi</h1>
                 <button class="cta">Learn More
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                   <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
@@ -57,7 +57,7 @@
                   </svg>
                   <span class="btn-background"></span>
                 </button>
-                <img src="assets/img/introduction-visual.png" alt="Welcome">
+                <img src="assets/img/nabi.png" alt="Welcome">
               </div>
               <div class="intro--options">
                 <a href="#0">
@@ -65,12 +65,12 @@
                   <p>A common cat name in Korea, Nabi (나비), was also the name of my first cat. In memory of Nabi, I began to use it as my nickname.</p>
                 </a>
                 <a href="#0">
-                  <h3>Fantasy interactive</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <h3>James Cook</h3>
+                  <p>A senior CIS student at the University of Louisville who loves Computer, Art, and Technology.... oh, Cat!</p>
                 </a>
                 <a href="#0">
-                  <h3>Paul &amp; shark</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <h3>YoonMin Cook</h3>
+                  <p>Yet, my third identity besides Korean American is Korean! Although I was born in the US, I grew up in South Korea and have dual citizenship.</p>
                 </a>
               </div>
             </div>
@@ -131,7 +131,7 @@
           <li class="l-section section">
             <div class="about">
               <div class="about--banner">
-                <h2>We<br>believe in<br>passionate<br>people</h2>
+                <h2>CIS Major<br>at the<br>University of Louisville</h2>
                 <a href="#0">Career
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
