--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <img src="assets/img/nabi.png" alt="Logo">
             <p>nabicook</p>
           </a>
-          <button class="header--cta cta">Hire Us</button>
+          <!-- <button class="header--cta cta">Hire Us</button> # deleted the button -->
           <div class="header--nav-toggle">
             <span></span>
           </div>
@@ -38,7 +38,7 @@
         <nav class="l-side-nav">
           <ul class="side-nav">
             <li class="is-active"><span>Welcome</span></li>
-            <li><span>About</span></li>
+            <li><span>Media</span></li>
             <li><span>CIS</span></li>
             <li><span>Contact</span></li>
             <li><span>Hire us</span></li>
@@ -77,34 +77,40 @@
           </li>
           <li class="l-section section">
             <div class="work">
-              <h2>Selected work</h2>
+              <h2>Content Creation</h2>
               <div class="work--lockup">
                 <ul class="slider">
                   <li class="slider--item slider--item-left">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-victory.jpg" alt="Victory">
+                        <a href="https://www.twitch.tv/nabicook" target="_blank">
+                          <img src="assets/img/Twitch.png" alt="Twitch">
+                      </a>                      
                       </div>
-                      <p class="slider--item-title">Victory</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">Twitch</p>
+                      <p class="slider--item-description">440+ Followers<br><br>I live stream gaming contents on my twitch channel</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-center">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-metiew-smith.jpg" alt="Metiew and Smith">
+                        <a href="https://www.youtube.com/nabicook" target="_blank">
+                          <img src="assets/img/Youtube.png" alt="Youtube">
+                      </a>
                       </div>
-                      <p class="slider--item-title">Metiew &amp; Smith</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">Youtube </p>
+                      <p class="slider--item-description">510+ Subscribers<br><br>I post various videos on my youtube channel.</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-alex-nowak.jpg" alt="Alex Nowak">
+                        <a href="https://www.instagram.com/nabicook/" target="_blank">
+                          <img src="assets/img/Instagram.png" alt="Instagram">
+                      </a>                      
                       </div>
-                      <p class="slider--item-title">Alex Nowak</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">Instagram</p>
+                      <p class="slider--item-description">170+ Followers<br><br>I post digital photography and personal photos on my Instagram.</p>
                     </a>
                   </li>
                 </ul>
@@ -132,7 +138,7 @@
             <div class="about">
               <div class="about--banner">
                 <h2>CIS Major<br>at the<br>University of Louisville</h2>
-                <a href="#0">Career
+                <a href="#0">Check out my Works on Github
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                     <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
@@ -141,19 +147,20 @@
                     </svg>
                   </span>
                 </a>
-                <img src="assets/img/about-visual.png" alt="About Us">
+                <img src="assets/img/UofL.webp" alt="UofL">
               </div>
               <div class="about--options">
                 <a href="#0">
-                  <h3>Winners</h3>
+                  <h3>Coding</h3>
                 </a>
                 <a href="#0">
-                  <h3>Philosophy</h3>
+                  <h3>Business</h3>
                 </a>
                 <a href="#0">
-                  <h3>History</h3>
+                  <h3>Database</h3>
                 </a>
               </div>
+
             </div>
           </li>
           <li class="l-section section">
@@ -161,14 +168,13 @@
               <div class="contact--lockup">
                 <div class="modal">
                   <div class="modal--information">
-                    <p>Pawia 5, 31-154 Kraków, Poland</p>
-                    <a href="mailto:ouremail@gmail.com">ouremail@gmail.com</a>
-                    <a href="tel:+148126287560">+48 12 628 75 60</a>
+                    <p>Louisville, KY 40217</p>
+                    <p>jycook0921@gmail.com</p>
+                    <p>+1 502 353 0222</p>
                   </div>
                   <ul class="modal--options">
-                    <li><a href="#0">Bēhance</a></li>
-                    <li><a href="#0">dribbble</a></li>
-                    <li><a href="mailto:ouremail@gmail.com">Contact Us</a></li>
+                    <li><a href="tel:+15023530222">Call</a></li>
+                    <li><a href="mailto:jycook0921@gmail.com">Email</a></li>
                   </ul>
                 </div>
               </div>
@@ -264,9 +270,9 @@
     </div>
   </div>
   <ul class="outer-nav">
-    <li class="is-active">Home</li>
-    <li>Works</li>
-    <li>About</li>
+    <li class="is-active">Welcome</li>
+    <li>Media</li>
+    <li>CIS</li>
     <li>Contact</li>
     <li>Hire us</li>
   </ul>
