--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                       </a>
                       </div>
                       <p class="slider--item-title">Youtube </p>
-                      <p class="slider--item-description">510+ Subscribers<br><br>I post various videos on my youtube channel.</p>
+                      <p class="slider--item-description">520+ Subscribers<br><br>I post various videos on my youtube channel.</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
@@ -152,13 +152,13 @@
                 <img src="assets/img/UofL.webp" alt="UofL">
               </div>
               <div class="about--options">
-                <a href="#0">
+                <a href="https://github.com/NabiCook/CIS-School-Work/tree/main">
                   <h3>Coding</h3>
                 </a>
-                <a href="#0">
+                <a href="https://github.com/NabiCook/CIS-School-Work/tree/main">
                   <h3>Business</h3>
                 </a>
-                <a href="#0">
+                <a href="https://github.com/NabiCook/CIS-School-Work/tree/main">
                   <h3>Database</h3>
                 </a>
               </div>
