--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
                   <li class="slider--item slider--item-left">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <a href="https://www.twitch.tv/nabicook" target="_blank">
-                          <img src="assets/img/Twitch.png" alt="Twitch">
+                        <a href="https://www.tiktok.com/@nabicook_" target="_blank">
+                          <img src="assets/img/Tiktok.png" alt="Tiktok">
                       </a>                      
                       </div>
-                      <p class="slider--item-title">Twitch</p>
-                      <p class="slider--item-description">440+ Followers<br><br>I live stream gaming contents on my twitch channel</p>
+                      <p class="slider--item-title">Tiktok</p>
+                      <p class="slider--item-description">400+ Followers<br><br>I use Tiktok to expand my audience. Focused on short-form contents</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-center">
@@ -102,7 +102,7 @@
                       </a>
                       </div>
                       <p class="slider--item-title">Youtube </p>
-                      <p class="slider--item-description">520+ Subscribers<br><br>I post various videos on my youtube channel.</p>
+                      <p class="slider--item-description">900+ Subscribers<br><br>I post various videos on my youtube channel, mostly vlog style</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
@@ -113,7 +113,7 @@
                       </a>                      
                       </div>
                       <p class="slider--item-title">Instagram</p>
-                      <p class="slider--item-description">170+ Followers<br><br>I post digital photography and personal photos on my Instagram.</p>
+                      <p class="slider--item-description">400+ Followers<br><br>I post digital photography and personal photos on my Instagram.</p>
                     </a>
                   </li>
                 </ul>
