--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           <li class="l-section section">
             <div class="hire">
               <h2>Work Experiences
-                <a href="https://www.linkedin.com/in/jycook0921/" class="linkedin-btn">
+                <a href="https://www.linkedin.com/in/nabicook" class="linkedin-btn">
                   LinkedIn
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
